# best.football

./: .gitignore  AGENT_CONDUCTOR.md  CLAUDE.md  DISCOVERY_PROGRESS.md  PROXY_PROFILES_IMPLEMENTATION_PLAN.md  README.md  STATE_SITES.md  TODO.md  creator-loop.sh  mep.sh  pyproject.toml  wrangler.toml
api/: __init__.py  main.py  zoho_email.py  zoho_oauth.py
builder/: generate.py  guides.py  rankings.py  sitemap.py
conf/: best.football.local.conf
htdocs/: privacy.html  sitemap.xml  terms.html
metrics/: __init__.py  competitive_index.py  density.py  travel_burden.py
pipeline/: __init__.py  cache.py  database.py  env.py  proxy.py  school_scraper_queue.py
scrapers/: __init__.py  base.py  california_cifss.py  florida_fhsaa.py  ohio_ohsaa.py  texas_uil.py
scripts/: agent_session_adapter.py  build_site.py  calculate_metrics.py  create_scraper_from_url.py  deploy-ha1.sh  deploy.sh  discover_schools.py  fetch_all.py  init_db.py  load_athletics.py  local_codex_repair.sh  local_school_maintenance.py  migrate_add_website.py  normalize_queue_state.py  probe_school_websites.py  recheck_blocked.py  reclassify_blocked_restricted.py  run_repair_queue.py  run_school_scrapes.py  school_creator_loop.py  weekly_scrape.py
sources/: census.py  nces.py
survey_scan_results/: connect_error.tsv  error.tsv  http_error.tsv  proxy_error.tsv  redirect.tsv  status_403.tsv  success.tsv  summary.tsv  timeout.tsv  transport_error.tsv
templates/: base.html  camp.html  camp_search.html  county.html  guide.html  guides_index.html  index.html  rankings_list.html  rankings_state.html  regions_index.html  school.html  schools_index.html  state.html  state_regions.html
tests/: test_local_school_maintenance.py  test_proxy_launcher_env.py  test_proxy_profiles.py  test_school_062466003700.py  test_school_page_publish.py  (+4 more)
(+210 files in other folders)
